          directly.  The _make_fatal() subroutine is not backwards
          compatible.

        * TEST: Added internal-backcompat.t to test backwards
          compatibility of internal interfaces.

        * DOCUMENTATION: Expanded documentation regarding how
          autodie changes calls to system(), and how this must be
          explicitly enabled.


1.999 Sat Feb 28 18:36:55 AUSEDT 2009

        * BUGFIX: Autodie now correctly propagates into string evals
          under 5.10+.  Autodie completely fails to propagate into
          string evals under 5.8.  No fix for 5.8 is known.

        * BUGFIX: The caller() method on autodie::exception objects
          should now always report the correct caller.  While it
          would always get the line, file, and package correct, previously
          it would sometimes report less-than-helpful callers like
          '__ANON__' or '(eval)'.

        * BUGFIX: autodie was treating system() as a user-sub, not
          a built-in.  This could tigger extra (unnecessary) work
          inside autodie, but otherwise had no user impact.

        * DOCUMENTATION: The synopsis for autodie::exception::system
          previously implied system() was made autodying by default.
          This was not the case.  It must still be enabled with
          use autodie qw(system).

        * DOCUMENTATION: Noted the 5.8 string eval bug in
          autodie/BUGS.

        * TEST: Added test for correct caller output on
          autodie::exception objects.  Thanks to Piers Harding
          for spotting this bug at KiwiFoo.

        * TEST: Added tests for user-defined autodying functions
          changing behaviour depending upon context.  This was
          reported in http://perlmonks.org/?node_id=744246 .

        * TEST: Tests for autodie propagating into string eval.

        * TEST: Expanded tests to ensure autodie::exception returns
          the correct line number and caller.
